[gd_scene load_steps=26 format=2]

[ext_resource path="res://fonts/GothamMedium_1.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/Gotham-Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/Gotham-Light.otf" type="DynamicFontData" id=3]
[ext_resource path="res://GameOverOption.gd" type="Script" id=4]
[ext_resource path="res://Gameview.gd" type="Script" id=5]
[ext_resource path="res://fonts/GothamBook.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://rsc/audi/TapToCon.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 100
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.870588, 0.870588, 0.870588, 1 )

[sub_resource type="DynamicFont" id=9]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="DynamicFont" id=15]
size = 80
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=16]
size = 200
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=17]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=18]
size = 149
font_data = ExtResource( 1 )

[node name="Game" type="Node2D"]

[node name="GameAddition" type="ColorRect" parent="."]
margin_left = -360.102
margin_top = -398.469
margin_right = 1471.9
margin_bottom = 2301.53
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem" type="Label" parent="GameAddition"]
margin_left = 365.0
margin_top = 1245.03
margin_right = 1437.0
margin_bottom = 1402.03
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1 + 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="Button" parent="GameAddition"]
anchor_left = 0.274
anchor_top = 0.2
anchor_right = 0.274
anchor_bottom = 0.2
margin_left = -140.115
margin_top = 1019.82
margin_right = 141.885
margin_bottom = 1240.82
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "45"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice2" type="Button" parent="GameAddition"]
anchor_left = 0.274
anchor_top = 0.2
anchor_right = 0.274
anchor_bottom = 0.2
margin_left = 256.863
margin_top = 1019.82
margin_right = 538.863
margin_bottom = 1240.82
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "45"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice3" type="Button" parent="GameAddition"]
anchor_left = 0.274
anchor_top = 0.2
anchor_right = 0.274
anchor_bottom = 0.2
margin_left = 639.651
margin_top = 1019.82
margin_right = 921.651
margin_bottom = 1240.82
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "45"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="GameAddition"]
light_mask = 0
margin_left = 399.0
margin_top = 590.0
margin_right = 1398.0
margin_bottom = 597.0
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
max_value = 1500.0
value = 1500.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="GameAddition"]
margin_left = 545.134
margin_top = 809.591
margin_right = 1241.13
margin_bottom = 973.591
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="GameAddition"]
wait_time = 0.001
autostart = true

[node name="Tween" type="Tween" parent="GameAddition"]

[node name="StartAudi" type="AudioStreamPlayer" parent="GameAddition"]
stream = ExtResource( 7 )

[node name="GameOverOption" type="ColorRect" parent="."]
visible = false
margin_left = -368.0
margin_top = -221.0
margin_right = 1470.0
margin_bottom = 2126.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="GameOverOption"]
margin_left = 390.714
margin_top = 1281.03
margin_right = 879.714
margin_bottom = 1465.03
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color_disabled = Color( 0.219608, 0.219608, 0.219608, 1 )
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
custom_colors/font_color_hover = Color( 0.219608, 0.219608, 0.219608, 1 )
custom_colors/font_color_pressed = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Continue?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GiveUp" type="Button" parent="GameOverOption"]
margin_left = 923.0
margin_top = 1277.03
margin_right = 1412.0
margin_bottom = 1461.03
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color_disabled = Color( 0.219608, 0.219608, 0.219608, 1 )
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
custom_colors/font_color_hover = Color( 0.219608, 0.219608, 0.219608, 1 )
custom_colors/font_color_pressed = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Give Up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timerview" type="Label" parent="GameOverOption"]
margin_left = 356.0
margin_top = 882.136
margin_right = 1443.0
margin_bottom = 1151.14
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
custom_colors/font_outline_modulate = Color( 0.219608, 0.219608, 0.219608, 1 )
custom_colors/font_color_shadow = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "rf"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="GameOverOption"]
wait_time = 5.997

[node name="Cost" type="Label" parent="GameOverOption"]
margin_left = 585.054
margin_top = 1409.76
margin_right = 743.054
margin_bottom = 1484.76
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1234"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="GameOverOption"]

[node name="Ghosttxt" type="Label" parent="."]
margin_left = 421.008
margin_top = 589.806
margin_right = 809.008
margin_bottom = 811.806
custom_fonts/font = SubResource( 18 )
custom_colors/font_color = Color( 0.933333, 0.129412, 0.129412, 1 )
text = "asd"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="GameAddition/Choice1" to="GameAddition" method="_on_Choice1_pressed"]
[connection signal="pressed" from="GameAddition/Choice2" to="GameAddition" method="_on_Choice2_pressed"]
[connection signal="pressed" from="GameAddition/Choice3" to="GameAddition" method="_on_Choice3_pressed"]
[connection signal="timeout" from="GameAddition/Timer" to="GameAddition" method="_on_Timer_timeout"]
[connection signal="visibility_changed" from="GameOverOption" to="GameOverOption" method="_on_GameOverOption_visibility_changed"]
[connection signal="visibility_changed" from="GameOverOption" to="GameAddition" method="_on_GameOverOption_visibility_changed"]
[connection signal="pressed" from="GameOverOption/Continue" to="GameOverOption" method="_on_Continue_pressed"]
[connection signal="pressed" from="GameOverOption/GiveUp" to="GameOverOption" method="_on_GiveUp_pressed"]
[connection signal="timeout" from="GameOverOption/Timer" to="GameOverOption" method="_on_Timer_timeout"]
